fix: fix UserInfo total